--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,16 @@
 {
     "version": 2,
-    "name": "chat-app-server-paolo",
-    "alias": ["chat-app-paolo-api"],
-    "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-    "routes": [
+    "builds": [
       {
-        "src": "/(.*)(\\.(?!(js|css|gif|ico|jpg|jpeg|png|svg|txt|xml|webmanifest)$)[^\\s]*$)",
-        "dest": "/index.js"
+        "src": "index.js",
+        "use": "@now/node"
       }
-    ]
+    ],
+    "routes": [
+        {
+          "src": "/(.*)",
+          "dest": "index.js"
+        }
+      ]
   }
   
